# go2_onnx_controller

./: .pre-commit-config.yaml  README.md
onnx_controller/: .gitignore  CMakeLists.txt  package.xml
onnx_controller/include/onnx_controller/: controller.hpp  motor_crc.hpp  robot_interface.hpp  writer.hpp
onnx_controller/launch/: controller_and_joystick.launch.py  real_start.launch.py  sim_start.launch.py
onnx_controller/proto/: CMakeLists.txt  ObservationAction.proto
onnx_controller/src/: BuildFileDescriptorSet.cpp  controller.cpp  motor_crc.cpp  robot_interface.cpp  writer.cpp
onnx_inference/: .gitignore  CMakeLists.txt  package.xml
onnx_inference/cmake/: dependencies.cmake
onnx_inference/data/: README.md  actor_feet_air.onnx  model.onnx  standing.onnx
onnx_inference/include/: onnx_actor.hpp
onnx_inference/src/cpp/: main.cpp  onnx_actor.cpp
onnx_inference/src/python/: main.py
onnx_interfaces/: CMakeLists.txt  package.xml
onnx_interfaces/msg/: ObservationAction.msg
